--- a/apps/faces/src/app/app.component.css
+++ b/apps/faces/src/app/app.component.css
@@ -24,7 +24,7 @@
 }
 
 header {
-  background-color: #143055;
+  background-color: #a5e6ba;
   color: white;
   padding: 5px;
   border-radius: 3px;
