--- a/apps/faces/src/app/app.component.html
+++ b/apps/faces/src/app/app.component.html
@@ -1,7 +1,7 @@
 <header class="flex">
   <style scoped>
     img {
-      border-radius: 30px;
+      border-radius: 20px;
     }
   </style>
   <img alt="Nx logo" width="75" src="https://cdn-images-1.medium.com/fit/c/200/200/1*Fw9JCCwf5QgPZIV6tlDUKA.png" />
@@ -11,7 +11,7 @@
   <h2>Resources &amp; Tools</h2>
   <div class="flex github-star-container">
     <a href="https://github.com/marvambi/faces" target="_blank" rel="noopener noreferrer">
-      If you like Nx, please give it a star:
+      If you like Faces, please give it a star:
       <div class="github-star-badge">
         <svg class="material-icons" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
           <path d="M0 0h24v24H0z" fill="none" />
