--- a/apps/faces/src/app/app.component.html
+++ b/apps/faces/src/app/app.component.html
@@ -21,25 +21,16 @@
       </div>
     </a>
   </div>
-  <p>Here are some links I find useful for (Dx)</p>
+  <p>Here are some links I find useful for your (Dx)</p>
   <ul class="resources">
     <li class="col-span-2">
-      <a class="resource flex" href="https://nxplaybook.com/p/nx-workspaces">
-        Nx video course
+      <a class="resource flex" href="https://github.com/marvambi/faces">
+        This is the project repo!
       </a>
     </li>
+    
     <li class="col-span-2">
-      <a class="resource flex" href="https://nx.dev/latest/angular/getting-started/getting-started">
-        Nx video tutorial
-      </a>
-    </li>
-    <li class="col-span-2">
-      <a class="resource flex" href="https://nx.dev/latest/angular/tutorial/01-create-application">
-        Interactive tutorial
-      </a>
-    </li>
-    <li class="col-span-2">
-      <a class="resource flex" href="https://nx.app/">
+      <a class="resource flex" href="https://presenti.ng/">
         <svg width="36" height="36" viewBox="0 0 120 120" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path
             d="M120 15V30C103.44 30 90 43.44 90 60C90 76.56 76.56 90 60 90C43.44 90 30 103.44 30 120H15C6.72 120 0 113.28 0 105V15C0 6.72 6.72 0 15 0H105C113.28 0 120 6.72 120 15Z"
@@ -48,7 +39,7 @@
             d="M120 30V105C120 113.28 113.28 120 105 120H30C30 103.44 43.44 90 60 90C76.56 90 90 76.56 90 60C90 43.44 103.44 30 120 30Z"
             fill="white" />
         </svg>
-        <span class="gutter-left">Nx Cloud</span>
+        <span class="gutter-left">Faces Cloud</span>
       </a>
     </li>
   </ul>
